--- a/publications.html
+++ b/publications.html
@@ -109,7 +109,7 @@
             <b>Validation of Conformal and Two-Point Contact Simulations using VT-FRA Roller Rig Test Data</b>
             <div class="small">
               Nikhil Kumar, Giovanni Mantovani, and Mehdi Ahmadian.<br />
-              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Kansas City, USA, 2026.
+              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Kansas City, MO, USA, 2026.
               [In Review]
             </div>
           </div>
@@ -121,7 +121,7 @@
             <b>Derailment and Curving Dynamics Assessment using a One-Quarter Scaled Roller Rig </b>
             <div class="small">
               Giovanni Mantovani, Nikhil Kumar, and Mehdi Ahmadian.<br />
-              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Kansas City, USA, 2026.
+              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Kansas City, MO, USA, 2026.
               [In Review]
             </div>
           </div>
@@ -133,7 +133,7 @@
             <b>Development of a Wheelset Roller Rig for Improving Rolling Stock Traction Efficiency</b>
             <div class="small">
               Giovanni Mantovani, Nikhil Kumar, and Mehdi Ahmadian.<br />
-              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Indianapolis, USA, 2025.
+              Proceedings of the 2025 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Indianapolis, IN, USA, 2025.
             </div>
             <div class="small" style="margin-top:8px;">
             <a href="https://doi.org/10.5281/zenodo.17219621" target="_blank" rel="noopener">DOI</a>
@@ -144,10 +144,10 @@
         <div class="card pub">
           <div class="pub-year">2024</div>
           <div>
-            <b>Estimation of Wheel-Rail Contact Patch Geometry Under Curving Conditionsy</b>
+            <b>Estimation of Wheel-Rail Contact Patch Geometry Under Curving Conditions</b>
             <div class="small">
               Nikhil Kumar, Giovanni Mantovani, and Mehdi Ahmadian.<br />
-              Proceedings of the 2026 American Railway Engineering and Maintenance-of-Way Association Annual Conference, Indianapolis, USA, 2025.
+              Proceedings of the 2024 American Railway Engineering and Maintenance-of-Way Association Annual Conference,  Louisville, KY, USA, 2024.
             </div>
             <div class="small" style="margin-top:8px;">
             <a href="https://doi.org/10.5281/zenodo.16055410" target="_blank" rel="noopener">DOI</a>
