--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <header class="site-header">
       <h1 class="site-title">Nikhil Kumar</h1>
-      <p class="site-subtitle">Contact mechanics, rail vehicle dynamics, tribology</p>
+      <p class="site-subtitle">Contact Mechanics, Rail Vehicle Dynamics, Tribology</p>
 
       <nav class="nav" aria-label="Primary">
         <a class="active" href="index.html">Home</a>
