--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div>
               <p class="small">
-                I am a PhD researcher in Mechanical Engineering at Virginia Tech, affiliated with the Center for Vehicle Systems and Safety and the Railways Technologies Laboratory. 
+                I am a Postdoctoral Researcher in Mechanical Engineering Department at Virginia Tech, affiliated with the Center for Vehicle Systems and Safety and the Railways Technologies Laboratory. 
                 My research focuses on wheel rail contact behavior and its implications for rail vehicle safety and performance.
               </p>
 
@@ -71,7 +71,7 @@
         <h2>Highlights</h2>
 
         <div class="card">
-          <b>Contact mechanics and wear modeling</b>
+          <b>Contact mechanics</b>
           <div class="small">Analytical and numerical contact models, friction, wear, and damage metrics.</div>
         </div>
 
