--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
           <div>
             <b>Practical Application of Passive Air-Coupled Ultrasonic Acoustic Sensors for Wheel Crack Detection</b>
             <div class="small">
-              Aashish Shaji, Nikhil Kumar, Giovanni Mantovani, Steve Southward, Mehdi Ahmadian.<br />
+              Aashish Shaju, Nikhil Kumar, Giovanni Mantovani, Steve Southward, Mehdi Ahmadian.<br />
               Sensors, 25(19), 6126, 2025.
             </div>
             <div class="small" style="margin-top:8px;">
@@ -78,7 +78,7 @@
           <div>
             <b>Traction enhancement evaluation of Magnetite and Alumina</b>
             <div class="small">
-              Nikhil Kumar, Ahmed Radmehr, and Mehdi Ahmadian.<br />
+              Nikhil Kumar, Ahmad Radmehr, and Mehdi Ahmadian.<br />
               International Journal of Rail Transportation, 1 - 19, 2025.
             </div>
             <div class="small" style="margin-top:8px;">
@@ -92,7 +92,7 @@
           <div>
             <b>Experimental Evaluation of Effect of Leaves on Railroad Tracks in Loss of Braking</b>
             <div class="small">
-              Nikhil Kumar, Ahmed Radmehr, Mehdi Ahmadian.<br />
+              Nikhil Kumar, Ahmad Radmehr, Mehdi Ahmadian.<br />
               Machines, 12(5), 1 - 19, 2024.
             </div>
             <div class="small" style="margin-top:8px;">
