--- a/projects.html
+++ b/projects.html
@@ -58,15 +58,33 @@
 </div>
 
 
-        <div class="card" id="project-2">
-          <b>Project title 2</b>
-          <div class="small">Short description of the technical focus and outcome.</div>
-          <ul class="list">
-            <li>Contact model or friction law detail.</li>
-            <li>Validation approach.</li>
-            <li>Impact on rail performance, wear, noise, or safety.</li>
-          </ul>
-        </div>
+<div class="card" id="project-2">
+  <b>Experimental investigation of traction-enhancing and traction-reducing agents at the wheel–rail interface (PhD Research)</b>
+  <div class="small">
+    Third-body layers, roller rig experimentation, traction control, wheel–rail contact mechanics.
+  </div>
+
+  <p class="small" style="margin-top:10px;">
+    This doctoral research focused on experimentally quantifying the effects of traction-enhancing and
+    traction-reducing third-body layers on wheel–rail contact dynamics using the VT–FRA Roller Rig.
+    The study examined both naturally occurring contaminants (e.g., leaves) and engineered materials
+    (e.g., magnetite and alumina) under controlled longitudinal and lateral creepage conditions.
+  </p>
+
+  <p class="small">
+    The work emphasized repeatable experimental protocols to measure longitudinal and tangential tractive
+    forces, contact patch evolution, and saturation behavior under varying contact conditions.
+    Results provided insight into how third-body layers alter effective friction, creep force orientation,
+    and traction availability, directly impacting braking performance, curving behavior, and derailment risk.
+  </p>
+
+  <ul class="list">
+    <li>Controlled evaluation of traction enhancers and reducers under dynamic creepage.</li>
+    <li>Quantification of longitudinal and tangential traction coefficients and saturation behavior.</li>
+    <li>Experimental insights into traction control, braking loss, and wheel–rail safety.</li>
+  </ul>
+</div>
+
 
         <div class="card" id="project-3">
           <b>Project title 3</b>
