--- a/projects.html
+++ b/projects.html
@@ -86,14 +86,41 @@
 </div>
 
 
-        <div class="card" id="project-3">
-          <b>Project title 3</b>
-          <div class="small">Short description with a concrete deliverable.</div>
-          <ul class="list">
-            <li>Methods: FEA, multi-body dynamics, system identification, measurements.</li>
-            <li>Outputs: plots, datasets, model library, guidelines, paper.</li>
-          </ul>
-        </div>
+<div class="card" id="project-3">
+  <b>Static conformal and two-point wheel–rail contact characterization using pressure-sensitive films</b>
+  <div class="small">
+    Conformal contact, two-point contact, pressure-sensitive films, contact patch geometry.
+  </div>
+
+  <p class="small" style="margin-top:10px;">
+    This study focused on experimentally characterizing static wheel–rail contact conditions under
+    conformal and two-point contact scenarios using ultra-low sensitivity pressure-sensitive films.
+    Tests were conducted on the VT–FRA Roller Rig to capture realistic contact behavior beyond
+    classical Hertzian assumptions.
+  </p>
+
+  <p class="small">
+    The experiments enabled direct measurement of contact patch area, geometry, and pressure
+    distribution under varying cant angles, lateral positions, and angles of attack.
+    These measurements were used to identify flange and throat contact behavior, validate
+    non-Hertzian contact models, and establish experimentally grounded contact locations for
+    subsequent dynamic traction studies and simulation tuning.
+  </p>
+
+  <ul class="list">
+    <li>Experimental visualization of conformal and two-point contact patches.</li>
+    <li>Quantification of contact area, geometry, and pressure distribution.</li>
+    <li>Validation support for non-Hertzian wheel–rail contact models.</li>
+  </ul>
+
+  <p class="small" style="margin-top:8px;">
+    <i>Post Script:</i> Portions of this work were presented at the AREMA 2024 Annual Conference.
+  </p>
+</div>
+
+
+
+
       </section>
     </main>
 
