--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,7 @@
 
 
 <div class="card" id="project-3">
-  <b>Static conformal and two-point wheel–rail contact characterization using pressure-sensitive films</b>
+  <b>Static conformal and two-point wheel–rail contact characterization using pressure-sensitive films (PhD Research)</b>
   <div class="small">
     Conformal contact, two-point contact, pressure-sensitive films, contact patch geometry.
   </div>
