--- a/projects.html
+++ b/projects.html
@@ -118,6 +118,33 @@
   </p>
 </div>
 
+<div class="card" id="project-4">
+  <b>Dynamic conformal wheel–rail contact testing under controlled creepage conditions</b>
+  <div class="small">
+    Dynamic conformal contact, mixed creepage, traction forces, experimental wheel–rail mechanics.
+  </div>
+
+  <p class="small" style="margin-top:10px;">
+    This project represents the first experimental testing initiative to systematically investigate
+    dynamic conformal wheel–rail contact under controlled longitudinal, lateral, and spin creepage
+    conditions. Experiments were conducted using the VT–FRA Roller Rig to replicate complex curving
+    scenarios that are traditionally addressed only through simulation.
+  </p>
+
+  <p class="small">
+    The study focused on measuring longitudinal and tangential tractive forces as the contact evolved
+    from tread to high-contact-angle regions under varying angle of attack and cant angle.
+    The resulting dataset provides unique insight into force orientation, saturation behavior, and
+    creep force redistribution in conformal contact, enabling direct experimental validation of
+    non-Hertzian contact models and assumptions used in wheel–rail dynamics and derailment analysis.
+  </p>
+
+  <ul class="list">
+    <li>First experimental investigation of dynamic conformal contact under mixed creepage.</li>
+    <li>Quantification of longitudinal and tangential traction behavior at high contact angles.</li>
+    <li>Experimental validation data for advanced wheel–rail contact simulations.</li>
+  </ul>
+</div>
 
 
 
